syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package net.badata.protobuf.converter.proto;

option java_package = "net.badata.protobuf.converter.proto";
option java_outer_classname = "ConverterProto";

message PrimitiveTest {
    int32 intValue = 1;
    int64 longValue = 2;
    float floatValue = 3;
    double doubleValue = 4;
    bool booleanValue = 5;
}

message FieldConverterTest {
    string enumString = 1;
    int64 dateToLong = 2;
    int64 localDateTimeToLong = 3;
    int64 localDateToLong = 4;
    int64 localTimeToLong = 5;
    google.protobuf.Timestamp dateToTimestamp = 6;
    google.protobuf.Timestamp localDateTimeToTimestamp = 7;
    google.protobuf.Timestamp localDateToTimestamp = 8;
    google.protobuf.Timestamp localTimeToTimestamp = 9;
    repeated string stringSetValue = 10;
}

message NullDefaultTest {
	string nullString = 1;
	string customInspectionString = 2;
	PrimitiveTest defaultPrimitives = 3;
}

message ConverterTest {
	int32 intValue = 1;
	int64 longValue = 2;
	float floatValue = 3;
	double doubleValue = 4;
	bool booleanValue = 5;
	string stringValue = 6;
	PrimitiveTest primitiveValue = 7;
	FieldConverterTest fieldConversionValue = 8;
	NullDefaultTest nullDefaultValue = 9;
	repeated string stringListValue = 10;
	repeated PrimitiveTest complexListValue = 11;
	repeated PrimitiveTest complexSetValue = 12;
	repeated PrimitiveTest complexNullableCollectionValue = 13;
	bytes bytesValue = 14;
	ConverterTest recursiveValue = 15;
	map<string, string> simpleMapValue = 16;
	map<string, PrimitiveTest> complexMapValue = 17;
}
